# C_Language

./: C10-1.c  C10-10.c  C10-2.c  C10-3.c  C10-4.c  C10-5.c  C10-6.c  C10-7.c  C10-8.c  C10-9.c  C6-1.c  C6-2.c  C7-1.c  C7-2.c  C7-3.c  C7-4.c  C7-5.c  C7-6.c  C7-7.c  C8-1.c  C8-10.c  C8-2.c  C8-3.c  C8-4.c  C8-5.c  C8-6.c  C8-7.c  C8-8.c  C8-9.c  C9-1.c  C9-2.c  C9-3.c  C9-4.c  C9-5.c  C9-6.c  CMakeLists.txt  P281_11.3.c  README.md  main.c
C 语言练习(Dev c++)/: 01_Hello World!.c  02_error.c  03_乘法.c  04_摄氏度与华氏度转换.c  05_找零.c  06_a++与++a.c  07_计算分段函数.c  08_从一加到十.c  09_前n项之和.c  10_温度转换表.c  11_乘方表.c  12_计算符号函数的值.c  13_统计字符.c  14_输出闰年.c  15_出租车计价.c  16_统计学生成绩.c  17_三角形判断.c  18_求给定精度的简单交错序列部分和.c  19_求奇数和.c  20_求幂级数展开的部分和.c  21_求分数序列前N项和.c  22_特殊a串数列求和.c  习题4-10 猴子吃桃问题.c  习题4-11 兔子繁衍问题.c  习题4-5 换硬币.c  习题4-6 水仙花数.c  习题4-7 最大公约数和最小公倍数.c  习题4-8 高空坠球.c  习题4-9 打印菱形图案.c  习题5-1 符号函数.c  习题5-2 使用函数求奇数和.c  习题5-3 使用函数计算两点间的距离.c  习题5-4 使用函数求素数和.c  习题5-5 使用函数统计指定数字的个数.c  习题5-6 使用函数输出水仙花数.c  习题5-7 使用函数求余弦函数的近似值.c  练习4-6 猜数字游戏.c  练习4-7 求e的近似值.c  练习5-3 数字金字塔.c
