cmake_minimum_required(VERSION 3.16)
project(C_Language C)

set(CMAKE_C_STANDARD 99)

add_executable(C1-1 main.c)
add_executable(C6-1 C6-1.c)
add_executable(C6-2 C6-2.c)
add_executable(C7-1 C7-1.c)
add_executable(C7-2 C7-2.c)
add_executable(C7-3 C7-3.c)
add_executable(C7-4 C7-4.c)
add_executable(C7-5 C7-5.c)
add_executable(C7-6 C7-6.c)
add_executable(C7-7 C7-7.c)
add_executable(C8-1 C8-1.c)
add_executable(C8-2 C8-2.c)
add_executable(C8-3 C8-3.c)
add_executable(C8-4 C8-4.c)
add_executable(C8-5 C8-5.c)
add_executable(C8-6 C8-6.c)
add_executable(C8-7 C8-7.c)
add_executable(C8-8 C8-8.c)
add_executable(C8-9 C8-9.c)
add_executable(C8-10 C8-10.c)
add_executable(C9-1 C9-1.c)
add_executable(C9-2 C9-2.c)
add_executable(C9-3 C9-3.c)
add_executable(C9-4 C9-4.c)
add_executable(C9-6 C9-6.c)
add_executable(C9-5 C9-5.c)
add_executable(C10-1 C10-1.c)
add_executable(C10-2 C10-2.c)
add_executable(P281_11.3 P281_11.3.c)

add_executable(C10-3 C10-3.c)
add_executable(C10-4 C10-4.c)